tests/fail/invalid_self_path.stderr
error: Path must start with 'self'
 --> tests/fail/invalid_self_path.rs:8:5
  |
8 |     #[decorate("invalid.path")] // Should fail - doesn't start with 'self'
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `decorate` (in Nightly builds, run with -Z macro-backtrace for more info)
